Refaisage du nombre d'inscrits

--- a/src/PlanIt/EventBundle/Resources/views/templates/infos.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/templates/infos.html.twig
@@ -5,7 +5,7 @@
 </div>
 <div class="info_dte">
 	<img src="/images/event/info_dte_invite.png" /> 
-	<p> NOMBRE D'INSCRITS </br> <span>{{guests}}</span> </p>
+	<p> NOMBRE D'INSCRITS </br> <span>{{nb_guests}}</span> </p>
 </div>
 <div class="info_dte info_color">
 	<img src="/images/event/info_dte_budget.png" /> 
