--- a/src/PlanIt/GuestsBundle/Resources/views/templates/title.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/title.html.twig
@@ -1,2 +1,3 @@
 {% twig_js name="guests_title" %}
-<div class="col-md-12" > <h1>{{name|upper}}</h1> </div>
+<div class="col-md-10" > <h1>{{name|upper}}</h1> </div>
+<div class="col-md-2" > Inscrits : {{nb_guests}}/{{nb_max}} </div>
