--- a/src/PlanIt/BudgetBundle/Resources/views/Inflow/form.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/Inflow/form.html.twig
@@ -1,11 +1,11 @@
-<div class="modal fade addTypeItemModal" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+<div class="modal fade addInflowModal" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
             <h4 class="modal-title" id="myModalLabel">Ajouter une catégorie</h4>
             </div>
             <div class="modal-body">
-                <form id="form-post-typeitem" action="" method="post" {{ form_enctype(form) }}>
+                <form id="form-post-typeexpense" action="/app_dev.php/api/inflows/{{module_id}}" method="post" {{ form_enctype(form) }}>
                     {{ form_widget(form) }}
 
 			    <p>
