Suppression type de dépense

--- a/src/PlanIt/BudgetBundle/Resources/public/css/budget.scss
+++ b/src/PlanIt/BudgetBundle/Resources/public/css/budget.scss
@@ -320,6 +320,12 @@ p {
 	outline: none;
 }
 
+.supp-type_expense{
+	float:right;
+	margin:7px;
+	cursor:default;
+}
+
 
 /* Content */
 .content-wrap {
