--- a/src/PlanIt/BudgetBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/BudgetBundle/Resources/public/css/general.scss
@@ -42,3 +42,21 @@ $color: #847299;
 		display: block;
 	}
 }
+
+.modal.validate {
+	button {
+		background: url("/images/utils.png") no-repeat;
+		width: 50%;
+		height: 87px;
+		display: inline-block;
+		background-size: 17%;
+		padding-top: 71px;
+		font-size: 13px;
+		border: none;
+		background-position: 50% -1px;
+		&#delete_cancel {
+			background-position: 50% -142px;
+			background-size: 20%;
+		}
+	}
+}
