--- a/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
@@ -4,12 +4,12 @@
     <div class="row list" >
         <div class="head-list accordion-head">
             <form action="">
-                <select onchange="multipleAction({{type.id}})" name="actions" id="actions-{{type.id}}">
+                <select onchange="showModalMultiple({{type.id}})" data-multiple="1" data-action="$('#actions-{{type-id}}').val()" data-type="{{type.id}}" name="actions" id="actions-{{type.id}}">
                         <option value="none">Action</option>
                         {% if moduleGuestType == false %}
                             <option value="send">Envoyer</option>
                         {% endif %}
-                        <option value="delete">Supprimer</option>
+                        <option data-toggle="modal" data-target=".deleteGuestModal" data-multiple="1" data-action="delete" data-type="{{type.id}}" value="delete">Supprimer</option>
                 </select>
             </form>
             <div class="name">{{type.label}}</div>
@@ -74,7 +74,7 @@
                             <div {% if not guest.sent %} onclick="sendMail({{guest.id}})" {% endif %} id="sent-{{guest.id}}" data-type="{{guest.sent}}" class="send sent-{{guest.sent}} col-md-1" data-placement="top" data-original-title="Vous avez déjà envoyé cette invitation"><div class="picto"></div></div>
                             <div class="delete col-md-1"><div class="picto" data-toggle="modal" data-target=".deleteGuestModal" data-type="{{guest.id}}"></div></div>
                         {% elseif moduleGuestType == true %}
-                            <div class="delete col-md-2 pull-right"><div class="picto" data-toggle="modal" data-target=".deleteGuestModal" data-type="{{guest.id}}"></div></div>
+                            <div class="delete col-md-2 pull-right"><div class="picto" data-toggle="modal" data-target=".deleteGuestModal" data-id="{{guest.id}}" data-multiple="0" data-name="{{guest.firstname}} {{guest.lastname}}"></div></div>
                         {% endif %}
                     </div>
             {% endif %}
@@ -92,16 +92,31 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">Voulez vous vraiment supprimer cet invité?</h4>
+            <h4 class="modal-title" id="myModalLabel_deleteGuest"></h4>
             </div>
             <div class="modal-body row">
-                <button id="delete_confirm" class="btn btn-default col-md-6"> Oui </button>
+                <button id="delete_confirm_guest" class="btn btn-default col-md-6"> Oui </button>
                 <button id="delete_cancel" class="btn btn-default" class ="col-md-6" data-dismiss="modal"> Non </button>
 
             </div>
         </div>
   </div>
 </div>
+
+<!-- <div class="modal fade deleteGuestsModal validate" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel_deleteGuests"></h4>
+            </div>
+            <div class="modal-body row">
+                <button id="delete_confirm_guest" class="btn btn-default col-md-6"> Oui </button>
+                <button id="delete_cancel" class="btn btn-default" class ="col-md-6" data-dismiss="modal"> Non </button>
+
+            </div>
+        </div>
+  </div>
+</div> -->
 
 <script>guests();</script>
 
