Correction css + page lieu v1

--- a/app/Resources/views/templates/sidebar.html.twig
+++ b/app/Resources/views/templates/sidebar.html.twig
@@ -27,8 +27,8 @@
                 </ul>
             {% endfor %}
         </ul>
-        <li class="account">Mon compte</li>
-        <li class="last help">Aide</li>
+        <li class="account"><a href="#"> Mon compte </a></li>
+        <li class="last help"><a href="#"> Aide </a></li>
     </ul>
 {% endblock %}
 
