--- a/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
@@ -6,7 +6,7 @@
 	left: 0;
 	position: fixed;
 	top:0;
-	width: 180px;
+	width: 200px;
 
 	#logo {
 		//box-shadow: -3px 10px 12px #000;
@@ -44,7 +44,7 @@
 
 	.user {
 		padding: 15px 15px 20px 15px;
-		@include box-shadow(0px,4px,2px,-2px,#1c1c1c);
+		@include box-shadow(0px,2px,2px,-2px,#1c1c1c);
 		img {
 			float: left;
 			height: 41px;
@@ -69,11 +69,12 @@
 		margin: 0;
 		padding: 0;
 		li {
-			@include box-shadow(0px,4px,2px,-2px,#1c1c1c);
+			@include box-shadow(0px,2px,2px,-2px,#1c1c1c);
 			color: #dddddd;
 			list-style: none;
 			padding: 9px 0 9px 40px;
 			font: 14px 'PT Sans';
+			cursor: pointer;
 			a {
 				color: #dddddd;
 				font: 14px 'PT Sans';
@@ -96,12 +97,11 @@
 		li.event {
 			background: url('/images/picto-menu.png') no-repeat;
 			background-position: 98% -135px;
-			border: 0;
 			@include border-radius(0); 
 			&:hover,
 			&.open {
-				border-left: solid 8px $blue_logo;
-				padding-left: 32px !important;
+				border-left: solid 5px $blue_logo;
+				padding-left: 35px !important;
 			}
 			&.open {
 				background-position: 98% -184px;
@@ -121,13 +121,13 @@
 	}
 
 	ul li.events {
-		background-position: 11px -23px;
+		background-position: 5px -23px;
 	}
 	ul li.account {
-		background-position: 11px -55px;
+		background-position: 5px -55px;
 	}
 	ul li.help {
-		background-position: 11px -86px;
+		background-position: 5px -86px;
 	}
 
 }
