Bug delete guest fix

--- a/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
@@ -12,6 +12,7 @@
 	<section>
 		<div class="container_onglet" >			
 			<section>
+				<a href="/app_dev.php/pdf/{{module_id}}">Imprimer la liste de courses</a>
 				<div class="tabs tabs-style-topline">
 					<div class="row">
 						<nav class="col-md-12">
