--- a/src/PlanIt/TodoBundle/Resources/views/layout.html.twig
+++ b/src/PlanIt/TodoBundle/Resources/views/layout.html.twig
@@ -10,6 +10,9 @@
 
 {% block javascripts %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
+    {% javascripts '@PlanItTodoBundle/Resources/views/templates/*.html.twig' filter="twig_js, ?yui_js" %}
+      <script language="javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
     {% javascripts  %}
           <script language="javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
