--- a/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
+++ b/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
@@ -66,7 +66,7 @@ header {
 	}
 	.checked {
 			background-color: $color !important;
-			color:#fff;
+			//color:#fff;
 			}
 	.labels.row {
 			margin: 0;
