--- a/src/PlanIt/UserBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/general.scss
@@ -13,7 +13,7 @@ $menu_module: #2e2d2d;
 $blue_logo: #61c0a5;
 
 
-$head_event: #f1f1f1;
+$head_event: #d3d3d3;
 $text_listing: #444343;
 $add_event : #f1f1f1;
 
