--- a/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
@@ -27,6 +27,7 @@
             </div>
                  {{ render(controller('PlanItGuestsBundle:Guest:form', { 'module_id' : module_id } ))}}
                  {{ render(controller('PlanItGuestsBundle:PaymentMeans:form', { 'module_id' : module_id } ))}}
+                 {{ render(controller('PlanItGuestsBundle:Page:updatemodule', { 'module_id' : module_id } ))}}
 
 
             <div id="guests_list">
