--- a/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
@@ -13,6 +13,8 @@
                 </select>
             </form>
             <div class="name">{{type.label}}</div>
+            <div class="delete_type"></div>
+            <div class="modify_type"></div>
             <div class="price">{{type.price}}€/pers</div>
         </div>
         {# Labels #}
