--- a/web/css/selectize.css
+++ b/web/css/selectize.css
@@ -128,8 +128,8 @@
   display: inline-block;
 }
 .selectize-input {
-  border: 1px solid #d0d0d0;
-  padding: 8px 8px;
+  /*border: 1px solid #d0d0d0;*/
+  padding: 5px 5px;
   display: inline-block;
   width: 100%;
   overflow: hidden;
