J-5 en dur pour la présentation

--- a/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
@@ -5,7 +5,8 @@
 			<div class="event-thumbnail">
 				<div class="head">
 					<h2>{{event.name}}</h2>
-					<span class="date"> {{ event.begin_date}}</span>
+					{# <span class="date"> {{ event.begin_date}}</span> #}
+					<span class="date"> J-5 </span>
 				</div>
 				<div class="content">
 					<div class="image-cropper">
