--- a/src/PlanIt/GuestsBundle/Resources/views/TypeGuest/form.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/TypeGuest/form.html.twig
@@ -2,7 +2,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel">Ajouter un type d'invité</h4>
+                <h4 class="modal-title" id="myModalLabel">Ajouter une catégorie d'invité</h4>
                 </div>
                 <div class="modal-body">
                     <form action="/app_dev.php/api/typeguests/{{module_id}}" method="post" {{ form_enctype(form) }} class="blogger">
