--- a/src/PlanIt/GuestsBundle/Resources/views/templates/payable.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/payable.html.twig
@@ -1,5 +1,5 @@
 {% twig_js name="guests_payable" %}
-<div class="col-md-3"><button data-toggle="modal" data-target=".addTypeGuestModal">Ajouter un type d'invité</button></div>
+<div class="col-md-3"><button data-toggle="modal" data-target=".addTypeGuestModal">Ajouter une catégorie d'invité</button></div>
 {% if moduleGuestType == 1 %}
     <div class="col-md-3"><button data-toggle="modal" data-target=".getInscrptionLink">Générer l'URL d'inscription</button></div>
 {% endif %}
