--- a/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/templates/guests.html.twig
@@ -1,94 +1,100 @@
 {% twig_js name="guests_list" %}
-{% for type in typeGuests %}
-    {# Tête de liste #}
-    <div class="row list" >
-        <div class="head-list accordion-head">
-            <form action="">
-                <select onchange="showModalMultiple({{type.id}})" data-multiple="1" data-action="$('#actions-{{type-id}}').val()" data-type="{{type.id}}" name="actions" id="actions-{{type.id}}">
-                        <option value="none">Action</option>
-                        {% if moduleGuestType == false %}
-                            <option value="send">Envoyer</option>
-                        {% endif %}
-                        <option data-toggle="modal" data-target=".deleteGuestModal" data-multiple="1" data-action="delete" data-type="{{type.id}}" value="delete">Supprimer</option>
-                </select>
-            </form>
-            <div class="name">{{type.label}}</div>
-            <div class="delete_type"></div>
-            <div class="modify_type"></div>
-            <div class="price">{{type.price}}€/pers</div>
-        </div>
-        {# Labels #}
-        <div class="accordion-body">
-            <div class="labels row">
-                <form action="" id="select-all" class="col-md-1">
-                    <input onclick="checkAll({{type.id}})" id="checkall-{{type.id}}" type="checkbox">
-                </form>
-                <p class="name col-md-1">Prénom</p>
-                <p class="name col-md-2">Nom</p>
-                <p class="email col-md-2">Email</p>
-                <p class="confirmed col-md-1">Confirmé</p>
-                {% if payable %}
-                <p class="payed col-md-1">Payé</p>
-                <p class="payment col-md-2">Mode de paiement</p>
-                {% endif %}
-                {% if moduleGuestType == false %}
-                    <p class="send col-md-1">Envoyer</p>
-                    <p class="delete col-md-1 pull-right">Supprimer</p>
-                {% elseif moduleGuestType == true %}
-                    <p class="delete col-md-2 pull-right">Supprimer</p>
-                {% endif %}
-            </div>
-            {# Données #}
-            
-                
-            
-            {% for guest in guests %}
-                {% if guest.type_guest.id == type.id %}
-                    <div class="row-list row">
-                        <form action="" id="select-field" class="col-md-1">
-                            <input class="checkbox-action-{{type.id}}" name="checkbox-action-{{type.id}}" id="{{guest.id}}" type="checkbox">
-                        </form>
-                        <input type="hidden" id="type_guest-{{guest.id}}" value="{{guest.type_guest.id}}">
-                        <div class="firstname col-md-1"><input onblur="updateGuest({{guest.id}}, 'firstname')" type="text" id="firstname-{{guest.id}}" value="{{guest.firstname}}"></div>
-                        <div class="lastname col-md-2"><input onblur="updateGuest({{guest.id}}, 'lastname')" type="text" id="lastname-{{guest.id}}" value="{{guest.lastname}}"></div>
-                        <div class="email col-md-2"><input onblur="updateGuest({{guest.id}}, 'email')" type="text" id="email-{{guest.id}}" value="{{guest.email}}"></div>
-                        <div class="confirmed col-md-1"><div onclick="updateGuest({{guest.id}}, 'confirmed')" id="confirmed-{{guest.id}}" data-type="{{guest.confirmed}}" class="light state-{{guest.confirmed}}" data-placement="top" data-original-title="Cliquez pour modifier"></div></div>
-                        {% if payable %}
-                        <div class="payed col-md-1">
-                                <div onclick="updateGuest({{guest.id}}, 'payed')" id="payed-{{guest.id}}" data-type="{{guest.payed}}" class="light state-{{guest.payed}}" data-placement="top" data-original-title="Cliquez pour modifier"></div>
-                        </div>
-                        <div class="payment col-md-2">
-                            <form action="" id="payment">
-                                {% if payment_means is empty %}
-                                    <span> Aucun moyen de paiement </span>
-                                {%else %}
-                                <select id="paymentmean-{{guest.id}}" onchange="updateGuest({{guest.id}}, 'paymentmean')" name="payment">
-                                    <option></option>
-                                    {% for payment in payment_means %}
-                                        <option value="{{payment.id}}" {% if guest.paymentmean.id == payment.id %} selected="selected" {% endif %}>{{payment.label}}</option>
-                                    {% endfor %}
-                                </select>
-                                {% endif %}
-                            </form>
-                        </div>
-                        {% endif %}
-                        {% if moduleGuestType == false %}
-                            <div {% if not guest.sent %} onclick="sendMail({{guest.id}})" {% endif %} id="sent-{{guest.id}}" data-type="{{guest.sent}}" class="send sent-{{guest.sent}} col-md-1" data-placement="top" data-original-title="Vous avez déjà envoyé cette invitation"><div class="picto"></div></div>
-                            <div class="delete col-md-1"><div class="picto" data-toggle="modal" data-target=".deleteGuestModal" data-id="{{guest.id}}" data-name="{{guest.firstname}} {{guest.lastname}}"></div></div>
-                        {% elseif moduleGuestType == true %}
-                            <div class="delete col-md-2 pull-right"><div class="picto" data-toggle="modal" data-target=".deleteGuestModal" data-id="{{guest.id}}" data-name="{{guest.firstname}} {{guest.lastname}}"></div></div>
-                        {% endif %}
-                    </div>
-            {% endif %}
-        {% endfor %}
-    </div>
 
-    {% if moduleGuestType == false %}
-        <div class="col-md-2 pull-right add-guest"><button data-toggle="modal" data-target=".addGuestModal" data-type="{{type.id}}">Ajouter un invité</button></div>
-    {% endif %}
-    
-    </div>
-{% endfor %}
+{% if typeGuests|length == 0 %}
+    <p class="empty">Il n'y a aucune catégorie d'invité</p>
+{% else %}
+    {% for type in typeGuests %}
+        {# Tête de liste #}
+        <div class="row list" >
+            <div class="head-list accordion-head">
+                <form action="">
+                    <select onchange="showModalMultiple({{type.id}})" data-multiple="1" data-action="$('#actions-{{type-id}}').val()" data-type="{{type.id}}" name="actions" id="actions-{{type.id}}">
+                            <option value="none">Action</option>
+                            {% if moduleGuestType == false %}
+                                <option value="send">Envoyer</option>
+                            {% endif %}
+                            <option data-toggle="modal" data-target=".deleteGuestModal" data-multiple="1" data-action="delete" data-type="{{type.id}}" value="delete">Supprimer</option>
+                    </select>
+                </form>
+                <div class="name">{{type.label}}</div>
+                <div class="delete_type"></div>
+                <div class="modify_type"></div>
+                <div class="price">{{type.price}}€/pers</div>
+            </div>
+            {# Labels #}
+            <div class="accordion-body">
+                <div class="labels row">
+                    <form action="" id="select-all" class="col-md-1">
+                        <input onclick="checkAll({{type.id}})" id="checkall-{{type.id}}" type="checkbox">
+                    </form>
+                    <p class="name col-md-1">Prénom</p>
+                    <p class="name col-md-2">Nom</p>
+                    <p class="email col-md-2">Email</p>
+                    <p class="confirmed col-md-1">Confirmé</p>
+                    {% if payable %}
+                    <p class="payed col-md-1">Payé</p>
+                    <p class="payment col-md-2">Mode de paiement</p>
+                    {% endif %}
+                    {% if moduleGuestType == false %}
+                        <p class="send col-md-1">Envoyer</p>
+                        <p class="delete col-md-1 pull-right">Supprimer</p>
+                    {% elseif moduleGuestType == true %}
+                        <p class="delete col-md-2 pull-right">Supprimer</p>
+                    {% endif %}
+                </div>
+                {# Données #}
+                
+                {% if type.guests|length == 0 %}
+                    <p class="empty">Il n'y a aucun invité </p>
+                {% endif %}
+                {% for guest in guests %}
+                    {% if guest.type_guest.id == type.id %}
+                        <div class="row-list row">
+                            <form action="" id="select-field" class="col-md-1">
+                                <input class="checkbox-action-{{type.id}}" name="checkbox-action-{{type.id}}" id="{{guest.id}}" type="checkbox">
+                            </form>
+                            <input type="hidden" id="type_guest-{{guest.id}}" value="{{guest.type_guest.id}}">
+                            <div class="firstname col-md-1"><input onblur="updateGuest({{guest.id}}, 'firstname')" type="text" id="firstname-{{guest.id}}" value="{{guest.firstname}}"></div>
+                            <div class="lastname col-md-2"><input onblur="updateGuest({{guest.id}}, 'lastname')" type="text" id="lastname-{{guest.id}}" value="{{guest.lastname}}"></div>
+                            <div class="email col-md-2"><input onblur="updateGuest({{guest.id}}, 'email')" type="text" id="email-{{guest.id}}" value="{{guest.email}}"></div>
+                            <div class="confirmed col-md-1"><div onclick="updateGuest({{guest.id}}, 'confirmed')" id="confirmed-{{guest.id}}" data-type="{{guest.confirmed}}" class="light state-{{guest.confirmed}}" data-placement="top" data-original-title="Cliquez pour modifier"></div></div>
+                            {% if payable %}
+                            <div class="payed col-md-1">
+                                    <div onclick="updateGuest({{guest.id}}, 'payed')" id="payed-{{guest.id}}" data-type="{{guest.payed}}" class="light state-{{guest.payed}}" data-placement="top" data-original-title="Cliquez pour modifier"></div>
+                            </div>
+                            <div class="payment col-md-2">
+                                <form action="" id="payment">
+                                    {% if payment_means is empty %}
+                                        <span> Aucun moyen de paiement </span>
+                                    {%else %}
+                                    <select id="paymentmean-{{guest.id}}" onchange="updateGuest({{guest.id}}, 'paymentmean')" name="payment">
+                                        <option></option>
+                                        {% for payment in payment_means %}
+                                            <option value="{{payment.id}}" {% if guest.paymentmean.id == payment.id %} selected="selected" {% endif %}>{{payment.label}}</option>
+                                        {% endfor %}
+                                    </select>
+                                    {% endif %}
+                                </form>
+                            </div>
+                            {% endif %}
+                            {% if moduleGuestType == false %}
+                                <div {% if not guest.sent %} onclick="sendMail({{guest.id}})" {% endif %} id="sent-{{guest.id}}" data-type="{{guest.sent}}" class="send sent-{{guest.sent}} col-md-1" data-placement="top" data-original-title="Vous avez déjà envoyé cette invitation"><div class="picto"></div></div>
+                                <div class="delete col-md-1"><div class="picto" data-toggle="modal" data-target=".deleteGuestModal" data-id="{{guest.id}}" data-name="{{guest.firstname}} {{guest.lastname}}"></div></div>
+                            {% elseif moduleGuestType == true %}
+                                <div class="delete col-md-2 pull-right"><div class="picto" data-toggle="modal" data-target=".deleteGuestModal" data-id="{{guest.id}}" data-name="{{guest.firstname}} {{guest.lastname}}"></div></div>
+                            {% endif %}
+                        </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+
+        {% if moduleGuestType == false %}
+            <div class="col-md-2 pull-right add-guest"><button data-toggle="modal" data-target=".addGuestModal" data-type="{{type.id}}">Ajouter un invité</button></div>
+        {% endif %}
+        
+        </div>
+    {% endfor %}
+{% endif %}
 
 <div class="modal fade deleteGuestModal validate" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
     <div class="modal-dialog">
